# Brain-v3

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  CODEOWNERS  PLATFORM.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.engineering-os/: README.md  lessons-learned.md  pending-stakeholder-attention.md  spawn-heartbeat.jsonl
.engineering-os/artifacts/: platform.journal.md
.engineering-os/state/: active.json  active.json.bak.2026-06-07T21-36-09Z  active.json.bak.2026-06-07T21-52-00Z  active.json.bak.2026-06-07T22-00-00Z  registry.json
.github/workflows/: pr.yml  (+10 more)
agent-platform/: README.md
ai-platform/: README.md
apps/: README.md
commerce-intelligence/: README.md
config/: README.md
connector-platform/: README.md
contracts/: README.md  buf.gen.yaml  buf.yaml
customer-intelligence/: README.md
data-platform/: README.md
docs/: ACCESS_CONTROL.md  Brain_BRD.docx  Brain_Database_Schema.docx  Brain_Implementation_Blueprint_Platform-First.docx  Brain_Repository_Architecture.md  Brain_Repository_Architecture_v2.md  Brain_Repository_Migration_Plan.md  Brain_Solution_Architecture.docx  Brain_Solution_Architecture_delta-v1.1.md  nestjs-service-template.md  onboarding-production-plan.md  realtime-integration-architecture.md  realtime-integration-plan.md
infra/: DEPLOYMENT.md  README.md
libs/: README.md
observability/: runbooks-index.md
platform/: README.md
platform-foundation/: PHASE.md
py-libs/: README.md
sdk/: README.md
shared/: README.md
tools/: scaffold_repo.sh
(+889 files in other folders)
